feat: 添加react路由，添加home页面

--- a/src/pages/home/index.module.scss
+++ b/src/pages/home/index.module.scss
@@ -1,3 +1,7 @@
 .index {
-  background: #fff;
+  background: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: calc(100vh - 64px - 65px);
 }
